--- a/notebooks/Model_unscaled_data.ipynb
+++ b/notebooks/Model_unscaled_data.ipynb
@@ -744,12 +744,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "### ARIMA "
    ]
   },
   {
@@ -1264,6 +1262,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GRU "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1407,11 +1412,6 @@
     "Even after introducing dropout, the model overfits, \n",
     "Hence, LSTM, GRU do not work very well with our unscaled data. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
