--- a/notebooks/EDA_feature_engineering.ipynb
+++ b/notebooks/EDA_feature_engineering.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,6 +16,13 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading dataset"
    ]
   },
   {
